<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_description">Download complete</string>
    <string name="notification_button_text">Check the status</string>


    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="button_download">Download</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="rb_glide_description">Glide - Image loading Library by BumTech</string>
    <string name="rb_load_app_description">Current repository by Udacity</string>
    <string name="rb_retrofit_description">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="select_file">Please select the file to download</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="ok">OK</string>


</resources>
