<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/text_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:textSize="@dimen/default_text_size"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:text="prueb texto largooo muy largo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_label_name"
        app:layout_constraintTop_toTopOf="@id/text_label_name" />

    <TextView
        android:id="@+id/text_label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="@dimen/default_text_size"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@+id/text_label_name"
        app:layout_constraintTop_toBottomOf="@id/text_label_name" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="texto corto"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toTopOf="@+id/text_label_status" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/default_text_size" />

</androidx.constraintlayout.motion.widget.MotionLayout>