<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cloud_download"
            android:layout_marginTop="20dp"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/cloud_download_black_24dp"
            app:tint="#C42AFF" />

    </FrameLayout>


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="@+id/custom_button"
        app:layout_constraintStart_toStartOf="@+id/custom_button"
        app:layout_constraintTop_toBottomOf="@id/frame_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <RadioButton
            android:id="@+id/radio_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/rb_glide_description"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/radio_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/rb_load_app_description"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/radio_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/rb_retrofit_description"
            android:textSize="@dimen/default_text_size" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintVertical_bias="0.905" />

</androidx.constraintlayout.widget.ConstraintLayout>